overflow fix, cats

--- a/src/scss/components/account.scss
+++ b/src/scss/components/account.scss
@@ -554,7 +554,7 @@ ul.searches {
 	display: none;
 	margin-top: -0.5em;
 	margin-bottom: 1.25em;
-	overflow: hidden;
+	overflow: scroll;
 	p {
 		margin-bottom: 0;
 	}
